@@ -1,19 +1,27 @@
+package entity;
+
+import entity.movement.Direction;
+import entity.movement.Movable;
+import entity.movement.MovementManager;
 import fri.shapesge.Image;
 import fri.shapesge.ImageData;
+import grid.GameCanvas;
+import grid.Tile;
+import resources.ImageManager;
 
 import java.util.ArrayList;
 
 /**
  * Trieda player predstavuje hráča ovládaného používateľom pomocou klávesnice.
  */
-public class Player {
+public class Player implements Movable {
 
-    private static final ImageData HEALTH = new ImageData("images/misc/health.png");
+    private static final ImageData HEALTH = ImageManager.getImage("misc/health");
     private static final int BOMB_COOLDOWN = 1000;
 
     private final ArrayList<Image> healthPoints = new ArrayList<>(this.health);
     private final GameCanvas gameCanvas;
-    private final Movement movement;
+    private final MovementManager movement;
     private final Image image;
 
     private Tile tile;
@@ -25,14 +33,10 @@ public class Player {
      * @param tile tile, na ktorom sa hráč zobrazí
      */
     public Player(Tile tile) {
-        this.image = new Image("images/player/down_staying.png");
+        this.image = new Image(ImageManager.getImage("player/down_staying"));
 
-        this.movement = new Movement(this.image);
-        this.movement.registerDirection(Movement.Direction.UP, "images/player/up_staying.png", "images/player/up_moving.png");
-        this.movement.registerDirection(Movement.Direction.DOWN, "images/player/down_staying.png", "images/player/down_moving.png");
-        this.movement.registerDirection(Movement.Direction.LEFT, "images/player/left_staying.png", "images/player/left_moving.png");
-        this.movement.registerDirection(Movement.Direction.RIGHT, "images/player/right_staying.png", "images/player/right_moving.png");
-        this.movement.teleport(Movement.Direction.UP, tile);
+        this.movement = new MovementManager(this);
+        this.movement.teleport(Direction.UP, tile);
 
         this.image.makeVisible();
         this.gameCanvas = tile.getGameCanvas();
@@ -48,7 +52,7 @@ public class Player {
     }
 
     private void die() {
-        this.image.changeImage("images/player/death.png");
+        this.image.changeImage(ImageManager.getImage("player/death"));
         this.gameCanvas.lose();
     }
 
@@ -66,8 +70,8 @@ public class Player {
     public void takeDamage(int amount) {
         this.health -= amount;
         for (int i = 0; i < amount && !this.healthPoints.isEmpty(); i++) {
-            this.healthPoints.get(this.healthPoints.size() - 1).makeInvisible();
-            this.healthPoints.remove(this.healthPoints.size() - 1);
+            this.healthPoints.getLast().makeInvisible();
+            this.healthPoints.removeLast();
         }
     }
 
@@ -96,38 +100,37 @@ public class Player {
      * ShapesGE listener pre kliknutie klávesy S alebo šípka dole. Spustí pokus o posun smerom dole.
      */
     public void moveDown() {
-        this.move(Movement.Direction.DOWN);
+        this.move(Direction.DOWN);
     }
 
     /**
      * ShapesGE listener pre kliknutie klávesy W alebo šípka hore. Spustí pokus o posun smerom hore.
      */
     public void moveUp() {
-        this.move(Movement.Direction.UP);
+        this.move(Direction.UP);
     }
 
     /**
      * ShapesGE listener pre kliknutie klávesy A alebo šípka vľavo. Spustí pokus o posun smerom vľavo.
      */
     public void moveLeft() {
-        this.move(Movement.Direction.LEFT);
+        this.move(Direction.LEFT);
     }
 
     /**
      * ShapesGE listener pre kliknutie klávesy D alebo šípka vpravo. Spustí pokus o posun smerom vpravo.
      */
     public void moveRight() {
-        this.move(Movement.Direction.RIGHT);
+        this.move(Direction.RIGHT);
     }
 
-    private void move(Movement.Direction dir) {
+    private void move(Direction dir) {
         if (this.movement.isActive() || this.health <= 0) {
             return;
         }
         Tile newTile = this.gameCanvas.getTileAtBoard(this.tile.getBoardX() + dir.getX(), this.tile.getBoardY() + dir.getY());
-        if (newTile != null && newTile.playerEnterTile()) {
-            this.movement.startMoving(dir, this.tile, 70);
-            this.tile = newTile;
+        if (newTile != null && newTile.onPlayerEnterTile(this.tile)) {
+            this.movement.startMoving(dir, this.tile, newTile);
         }
     }
 
@@ -138,6 +141,45 @@ public class Player {
         if (!this.movement.isActive() && this.health <= 0) {
             this.die();
         }
+    }
+
+    @Override
+    public void afterMovementEvent(Tile tile) {
+        this.tile = tile;
+        tile.afterPlayerEnterTile();
+    }
+
+    /**
+     * this.movement.registerDirection(Direction.UP, "images/player/up_staying.png", "images/player/up_moving.png");
+     * this.movement.registerDirection(Direction.DOWN, "images/player/down_staying.png", "images/player/down_moving.png");
+     * this.movement.registerDirection(Direction.LEFT, "images/player/left_staying.png", "images/player/left_moving.png");
+     * this.movement.registerDirection(Direction.RIGHT, "images/player/right_staying.png", "images/player/right_moving.png");
+     *
+     *
+     *
+     *
+     * */
+
+
+
+    @Override
+    public Image getImage() {
+        return this.image;
+    }
+
+    @Override
+    public int getTimeBetweenSteps() {
+        return 70;
+    }
+
+    @Override
+    public Direction.Pack[] getValidDirections() {
+        return new Direction.Pack[] {
+            new Direction.Pack(Direction.UP, ImageManager.getImage("player/up_staying"), new ImageData[]{ImageManager.getImage("player/up_moving")}),
+            new Direction.Pack(Direction.DOWN, ImageManager.getImage("player/down_staying"), new ImageData[]{ImageManager.getImage("player/down_moving")}),
+            new Direction.Pack(Direction.LEFT, ImageManager.getImage("player_left_staying"), new ImageData[]{ImageManager.getImage("player/left_moving")}),
+            new Direction.Pack(Direction.RIGHT, ImageManager.getImage("player/right_staying"), new ImageData[]{ImageManager.getImage("player/right_moving")}),
+        };
     }
 
 }
